tests/error/enum_errors/use_enum_class4.err
Error: Not enough arguments (at $FILE:14:24)
   | 
12 | @guppy
13 | def fun() -> str:
14 |     return MyEnum.method()
   |                         ^^ Missing argument (expected 1, got 0)

Note: Function signature is `MyEnum -> str`

Guppy compilation failed due to 1 previous error
